# BedFrame

./: .gitignore  CITATION.cff  README.md  config.toml
drugsberter/: config.toml  main.py  pyproject.toml
drugscraper/: Cargo.toml
drugscraper/src/: main.rs
drugscriber/: Cargo.toml
drugscriber/src/: boil.rs  main.rs  unboil.rs
eval/: evaluation.py  pyproject.toml  test_and_compare.py
eval/data/: query.sql
scripts/: csv_to_sql.py  runscript.py
