[project]
name = "drugsberter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=5.1.2",
    "transformers>=4.30.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "h5py>=3.8.0",
    "black>=25.9.0",
]
