[package]
name = "drugscriber"
version = "3.0.0"
edition = "2021"

[[bin]]
name = "drugscriber"
path = "src/main.rs"

[[bin]]
name = "boil"
path = "src/boil.rs"

[[bin]]
name = "unboil"
path = "src/unboil.rs"

[dependencies]
csv = "1.3"
quick-xml = "0.36"
regex = "1.11"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
